fix itemize indent for "mininet"

--- a/2 TCP/TCP and its applications.tex
+++ b/2 TCP/TCP and its applications.tex
@@ -224,6 +224,7 @@
     While the sender is injecting data segments into the network, disconnect the cable connecting the sender to the hub for about ten seconds. \\
     After observing several retransmissions, reconnect the cable:
     \begin{itemize}
+    	\setlength{\itemindent}{30pt}
         \item [\texttt{mininet>}] \textbf{link s1 h2 down}
         \item [-] after ten seconds...
         \item [\texttt{mininet>}] \textbf{link s1 h2 up}
