--- a/2 TCP/TCP and its applications.tex
+++ b/2 TCP/TCP and its applications.tex
@@ -85,7 +85,7 @@
 	\\
 	\normalsize
 	Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
-	\href{mailto:khordadi@ut.ac.ir}{khordadi@ut.ac.ir}
+	\href{mailto:a.a.khordadi@ut.ac.ir}{a.a.khordadi@ut.ac.ir}
 }
 
 \date{\vspace{30pt}\today\\\vspace{10pt}{\selectlanguage{farsi}\today}}
