--- a/2 TCP/TCP and its applications.tex
+++ b/2 TCP/TCP and its applications.tex
@@ -132,6 +132,15 @@
 %\caption
 %\end{otherlanguage}
 
+\section{Initialization}
+    SSH to your machine\footnote{e.g.\ 172.18.33.52} use command-line or other solutions\footnote{Putty, Mobaxterm, \ldots} with enabled X11-forwarding: \\
+    \centerline{\$ \textbf{ssh -X} \texttt{mininet@\textit{<your-vm-ip-address>}}} \\
+    Enter \texttt{mininet} as password.\\
+    Run mininet with default topology:
+    \begin{itemize}
+        \item [mininet>] \textbf{sudo mn}
+    \end{itemize}
+
 \section*{Telnet terminal}
 	Execute following commands: \\
 	\begin{itemize}
@@ -143,7 +152,7 @@
 	\begin{enumerate}
 		\item Explain TCP connection establishment and termination using the wireshark output.
 		\item What were the announced MSS values for the two hosts? \\
-		What happens if there is an intermediate network that has an MTU less than the MSS of each host? \\
+		\item What happens if there is an intermediate network that has an MTU less than the MSS of each host? \\
 		See if the \texttt{DF} flag was set in wireshark output.
 	\end{enumerate}
     
@@ -165,9 +174,12 @@
 	\end{itemize}
     \underline{Save} the \textbf{wireshark} output for your lab report.
     \subsection*{Report}
-    Explain what happened in both the UDP and TCP cases.
-    When a client requests a non-existing server (e.g. \textit{10.0.0.3}), how do UDP and TCP handle this request, respectively?
+    \begin{enumerate}
+        \item Explain what happened in both the UDP and TCP cases.
+        \item When a client requests a non-existing server (e.g. \textit{10.0.0.3}), how do UDP and TCP handle this request, respectively?
 
+    \end{enumerate}
+    
     %\pagebreak
 \section*{MSS and MTU}
     Issue following commands:
@@ -195,7 +207,7 @@
     \end{enumerate}
 
     %\pagebreak
-\section*{Exercise 4}
+\section*{IP Segment}
     Issue following commands:
     \begin{itemize}
         \item [h2>] \textbf{wireshark \&}
@@ -205,13 +217,15 @@
     Do the same experiment three times. \\
     \underline{Save} all the \textbf{wireshark} outputs for your lab report.
     \subsection*{Report}
-    Using one of three \textbf{wireshark} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements? \\
-    Compare all the \textbf{wireshark} outputs you saved.
-    Discuss any differences among them, in terms of data segments and their acknowledgements.
-    \subsection*{Report}
-    From the \textbf{wireshark} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings. \\
-    How many different TCP options can you see?
-    Explain their meanings.
+    \begin{enumerate}
+        \item Using one of three \textbf{wireshark} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements? \\
+        Compare all the \textbf{wireshark} outputs you saved.
+        Discuss any differences among them, in terms of data segments and their acknowledgements.
+        \item From the \textbf{wireshark} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings. \\
+        How many different TCP options can you see?
+        Explain their meanings.
+    \end{enumerate}
+    
 
     %\pagebreak
 \section*{Link Up and Down}
@@ -219,7 +233,7 @@
     \begin{itemize}
     	\item [\texttt{h2>}] \textbf{socket -s 8888}
     	\item [\texttt{h1>}] \textbf{wireshark \&}
-    	\item [\texttt{h1>}] \textbf{socket -i -n1000000} \textit{10.0.0.2} \textbf{8888}
+        \item [\texttt{h1>}] \textbf{socket -i -n1000000} \textit{10.0.0.2} \textbf{8888}
     \end{itemize}
     While the sender is injecting data segments into the network, disconnect the cable connecting the sender to the hub for about ten seconds. \\
     After observing several retransmissions, reconnect the cable:
@@ -231,11 +245,13 @@
     \end{itemize}
     When all the data segments are sent, save the \textbf{wireshark} output for the lab report.
     \subsection*{Report}
-    Submit the \textbf{wireshark} output saved in this exercise. \\
-    From the \textbf{wireshark} output, identify when the cable was disconnected. \\
-    Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected. \\
-    Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.
-
+    \begin{enumerate}
+        \item Submit the \textbf{wireshark} output saved in this exercise.
+        \item From the \textbf{wireshark} output, identify when the cable was disconnected.
+        \item Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected.
+        \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished.
+    \end{enumerate}
+    
     %\pagebreak
 \section*{Fragmentation}
     Execute the following command, which is similar to the command we used to find out the maximum size of a UDP datagram in previous chapter, \\
@@ -247,9 +263,11 @@
     Let \textit{n} be larger than the maximum UDP datagram size we found in previous chapter. \\
     As an example, you may use n = 70080.
     \subsection*{Report}
-    Did you observe any IP fragmentation? \\
-    If IP fragmentation did not occur this time, how do you explain this compared to what you observed in previous chapter for UDP packets?
-
+    \begin{enumerate}
+        \item Did you observe any IP fragmentation?
+        \item If IP fragmentation did not occur this time, how do you explain this compared to what you observed in previous chapter for UDP packets?
+    \end{enumerate}
+    
 \section*{Keepalive parameter}
     Execute \textbf{sysctl -A | grep keepalive} to display the default values of the TCP kernel parameters that are related to the TCP keepalive timer. \\
     \subsection*{Report}
@@ -264,10 +282,10 @@
     Examine the default values of some TCP/IP configuration parameters that you might be interested in.
     Examine the configuration files in the \texttt{/proc/sys/net/ipv4} directory.
     \subsection*{Report}
-    Explain what is \textbf{sysctl} command for? \\
-    Explain two arbitrary TCP/IP configuration parameters.
-    What is their default values? \\
-    Name two arbitrary file in the \texttt{/proc/sys/net/ipv4} directory.
-	What is their content?
-	
+    \begin{enumerate}
+        \item Explain what is \textbf{sysctl} command for?
+        \item Explain two arbitrary TCP/IP configuration parameters. What is their default values?
+        \item Name two arbitrary file in the \texttt{/proc/sys/net/ipv4} directory. What is their content?
+    \end{enumerate}
+
 \end{document}
