--- a/1 UDP/UDP and its applications.tex
+++ b/1 UDP/UDP and its applications.tex
@@ -47,10 +47,10 @@
 \begin{center}
 	%	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 	\begin{minipage}{0.48\textwidth} \begin{flushleft}
-			\includegraphics[height=64pt,width=64pt]{img/logo.png}
+			\includegraphics[height=64pt,width=64pt]{../img/logo.png}
 	\end{flushleft}\end{minipage}
 	\begin{minipage}{0.48\textwidth} \begin{flushright}
-			\includegraphics[height=64pt]{img/eng-logo.png}
+			\includegraphics[height=64pt]{../img/eng-logo.png}
 	\end{flushright}\end{minipage}
 \end{center}
 \vspace*{-64pt}
