--- a/6 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/6 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -140,8 +140,14 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     %\caption
     %\end{otherlanguage}
 
+    \section*{HTTP}
+    Requirement:
+    \begin{enumerate}
+        \item Apache\footnote{\texttt{sudo apt-get install apache2 apache2-utils}} or Nginx\footnote{\texttt{sudo apt-get install nginx}} web service
+        \item curl
+    \end{enumerate}
     \section{HTTP Server}
-    Study the Apache server configuration file (see Section 8.2.3).
+    Config your Apache server configuration file\footnote{\texttt{/etc/apache2/apache2.conf}} (see Section 8.2.3 Ref Book).
     Examine the various configuration directives used and the corresponding settings. \\
     Start the Apache server on your host.
     In order to check if the server is working properly, you may start a \texttt{Mozilla} web browser to download the test page at \texttt{http://localhost/}.
@@ -151,15 +157,15 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     \begin{enumerate}
         \item How many httpd processes were started?
         Which one was the master server, and which ones were the child servers?
-        Justify your answer using the \texttt{httpd.conf} file. \\
-        \item What is the purpose of initiating multiple httpd processes? \\
+        Justify your answer using the \texttt{httpd.conf} file.
+        \item What is the purpose of initiating multiple httpd processes?
     \end{enumerate}
 
     %\pagebreak
-    \section*{HTTP Request}
+    \section{HTTP Request}
     Execute \textbf{wireshark} to capture packets between your host and a remote host. \\
     Login to the remote host’s web server: \textbf{telnet} \texttt{10.0.0.2} \textbf{80}. \\
-    In the login console, type the following HTTP request line by line: \\
+    In the login console, type the following HTTP request line by line:
     \begin{verbatim}
         GET /usage/index.html HTTP/1.0
         From: guest@your host
@@ -177,12 +183,17 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     \end{enumerate}
 
     %\pagebreak
-    \section*{HTTP Keep-Alive}
+    \section{HTTP Keep-Alive}
     By default, Apache server supports persistent connections. Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file to make sure it is turned on, as \texttt{KeepAlive} on. \\
     Execute \textbf{wireshark} to capture packets between your host and a remote host. \\
     Start \texttt{Mozilla} on your host. Go to menu \texttt{Edit/Preferences/Advanced/HTTP Networking}, and uncheck the Enable \texttt{Keep-Alive} checkbox to disable persistent connections. \\
     Enter the URL \texttt{http://10.0.0.2/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.
-    Use \textbf{wireshark} and print the HTTP requests and responses for the lab report. \\
+    Use \textbf{wireshark} and print the HTTP requests and responses for the lab report.
+
+    \begin{itemize}
+        \item \textit{You can use \textbf{curl -v http://www.google.com http://www.google.com} to get multiple query in one command.}
+    \end{itemize}
+
     Restart the \textbf{wireshark} program. Goto \texttt{Mozilla} menu \texttt{Edit/Preferences/Advanced/HTTP Networking}, and enable persistent connections by checking Enable \texttt{Keep-Alive}. \\
     Use \texttt{Mozilla} to reload the \texttt{try1.html} file. \\
     Use \textbf{wireshark} and print the HTTP requests and responses for the lab report.
@@ -197,9 +208,9 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     \end{enumerate}
 
     %\pagebreak
-    \section*{HTTP Submit}
+    \section{HTTP Submit}
     Execute \textbf{wireshark} to capture packets between your host and a remote host. \\
-    Use \texttt{Mozilla} to download the \texttt{http://remote host/try2.htm} file, which is an \texttt{HTML} form, from the remote host. \\
+    Use \texttt{Mozilla} to download the \texttt{http://remote\_host/try2.htm} file, which is an \texttt{HTML} form, from the remote host. \\
     Fill a text string, e.g., the name of the host being used, into the text field in the form and click the submit button in the form. \\
     When the server response is received, terminate \textbf{wireshark}. \\
     Examine how CGI works, and identify the data string sent to the server.
@@ -212,9 +223,10 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
 
 
     %\pagebreak
-    \section*{DHCP \footnote{For the exercises in this section, we use the same network setting as the one used in the previous section.}}
+    \section*{DHCP}
     In this exercise, we use \texttt{guchi} as the DHCP server, with a configuration file shown in Table 8.3. Do the following.
     \begin{enumerate}
+        \item Install DHCP Server: \texttt{\$sudo apt-get install isc-dhcp-server}\footnote{\href{https://help.ubuntu.com/community/isc-dhcp-server}{ubuntu->isc-dhcp-server} or \href{https://www.tecmint.com/install-dhcp-server-in-ubuntu-debian/}{extera}}
         \item Start the DHCP server on \texttt{guchi} in the foreground and working in the debugging mode: \textbf{/usr/sbin/dhcpd -d -f}.
         \item Execute \textbf{wireshark} to capture the DHCP messages in the network segment.
         \item Then do the following to enable DHCP for the Ethernet interface on \texttt{shakti}. \\
@@ -227,6 +239,26 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     \end{enumerate}
     Terminate \textbf{wireshark}.Print out the DHCP messages for the lab report. \\
     Save the DHCP server output on \texttt{guchi} for the lab report.
+
+    \subsection*{Table 8.3: A DHCP server configuration file}
+    \begin{verbatim}
+        default-lease-time 600;
+        max-lease-time 7200;
+        option subnet-mask 255.255.255.0;
+        option broadcast-address 128.238.66.255;
+        option routers 128.238.66.1;
+        #option domain-name-servers 128.238.2.38, 128.238.3.21;
+        #option domain-name "netlab.ut.ac.ir";
+
+        subnet 128.238.66.0 netmask 255.255.255.0 {
+            range 128.238.66.111 128.238.66.112;
+        }
+
+        host apah {
+            hardware ethernet 08:00:20:79:e9:9f;
+            fixed-address 128.238.66.110;
+        }
+    \end{verbatim}
 
     \subsection*{Report}
     \begin{enumerate}
@@ -241,13 +273,20 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     \end{enumerate}
 
     %\pagebreak
-    \section*{NTP exercises 1 \footnote{Before proceeding to the next exercise, reboot the hosts to restore their original configurations.}}
+    \section*{NTP}
+    \section{NTP Local Date}
     Execute \textbf{date} to display the system time of your host. Display the manual page of \textbf{date}, and study its options and usages.
     Try the following \textbf{date} commands: \\
-    \textbf{date -{}-date='2 days ago'} \\
-    \textbf{date -{}-date='3 months 2 days'} \\
-    \textbf{date -{}-set='+3 minutes'} \\
-    \textbf{date -r file\_name}\\
+    \begin{lstlisting}[language=bash,
+        basicstyle=\ttfamily,
+        showstringspaces=false,
+        commentstyle=\color{green},
+        keywordstyle=\color{black}]
+    date --date='2 days ago'
+    date --date='3 months 2 days'
+    date --set='+3 minutes'
+    date -r file_name
+    \end{lstlisting}
     You can choose any file in the current directory for the \textit{file\_name} parameter.
     \subsection*{Report}
     \begin{enumerate}
@@ -255,7 +294,7 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         Explain the use of the commands.
     \end{enumerate}
 
-    \section*{NTP exercises 2}
+    \section{NTP Remote Date}
     While \textbf{wireshark} is running, execute \textbf{rdate -p} \textit{remote\_host} to display the system time of the remote machine.
     Repeat the above \textbf{rdate} command, but use the \textbf{-u} option.
     Save the \textbf{wireshark} outputs for the lab report.
@@ -268,7 +307,7 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         \item What TCP header options were used?
     \end{enumerate}
 
-    \section*{NTP exercises 3}
+    \section{NTP Sync}
     In this exercise, we start the NTP server daemon on \texttt{shakti} and use NTP to
     synchronize all the other hosts to \texttt{shakti}.
     Study the NTP configuration file \texttt{/etc/ntp.conf} in \texttt{shakti} and in your host.
@@ -285,15 +324,74 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         Justify your answer using the \textbf{wireshark} output.
     \end{enumerate}
 
-    \section*{NAT exercises 1 \footnote{For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e., shakti and vayu are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.}}
+    \section*{NAT}
+    \section{NAT}
     Connect the hosts and Router 1 as shown in Fig.
-    8.7. Then set the IP address and the network mask of your host as shown in the figure.
+    8.7.\footnote{For the exercises in this section, we use a network setting as shown in Fig. 8.7. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e., shakti and vayu are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.} Then set the IP address and the network mask of your host as shown in the figure.
     In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
     One student should \textbf{telnet} to the router and configure the router as shown in Table 8.5. Note that there is a static translation that maps 10.0.0.7, or \texttt{guchi}, to 128.238.61.104.
     Login to the router, execute \textbf{write term} to display the current router configuration.
     Execute \textbf{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
-    Save both outputs for the lab report.
+    Save both outputs for the lab report.\\
+    We use linux instead a router and config it to use as \textbf{NAT} and \textbf{PAT}\footnote{\href{http://www.solutionsatexperts.com/iptables-nat-pat/}{linxu-iptables-NAT-PAT}}
+    \subsection*{Report}
+    \begin{enumerate}
+        \item How many entries were there in the translation table?
+        Why?
+    \end{enumerate}
 
+    \section*{NAT Visibility}
+    Keep the login session to the router running. Execute \textbf{wireshark} on all the hosts. \\
+    Before any host in the private network send any packets out, ping an inside host (e.g., \texttt{fenchi}) from an outside host (e.g., \textbf{vayu}). You may try to ping 10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104. Can you ping these IP addresses? \\
+    Let an inside host send packets to an outside host, e.g., from \texttt{fenchi}, execute ping 128.238.61.100. Can you ping \texttt{fenchi} from an outside host now? Why? Which IP address should be used in the ping command in order to ping \texttt{fenchi}? \\
+    Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. \\
+    Exchange the data you saved with a student in the other subnet.
+    \subsection*{Report}
+    \begin{enumerate}
+        \item Answer the above questions.
+        Use the saved translation table to justify your answers.
+        \item Compare the IP header of the ICMP query captured in the private network with that of the same ICMP query captured in the upper subnet, list their differences.
+        Explain how NAT works.
+        \item In addition to the IP address, what else was changed in the ICMP query packet?
+    \end{enumerate}
+
+
+    \section*{NAT Table}
+    Keep the login session to the router running. Execute \textbf{wireshark} to capture ICMP messages. \\
+    Execute \textbf{socket -i -u -n1 128.238.61.101 8888} on \texttt{agni} to generate an ICMP port unreachable error. \\
+    Print the ICMP error message for the lab report. \\
+    Execute \textbf{show ip nat translations} in the router login window or \textbf{sudo iptables -t nat -L -n -v} in linux router command line to display the translation table.
+    Save the output for the lab report.
+    Exchange the data you saved with a student in the other subnet.
+    \subsection*{Report}
+    \begin{enumerate}
+        \item Analyze the IP headers, the ICMP headers, and the ICMP payloads of the ICMP port unreachable errors captured in the private network and in the public network from the first experiment.
+        Explain how ICMP error was handled by the NAT router.
+    \end{enumerate}
+
+    \section*{NAT with PAT}
+    Reboot the router to restore its default configuration.
+    Then, configure the router to use PAT, as given in Table 8.6. Now all the hosts in the private network use the same IP address 128.238.61.1. However, note that there is a static translation that maps guchi’s port 80 to 128.238.61.1 port 80. \\
+    Execute \textbf{wireshark} on all the hosts. \\
+    Generate traffic between the inside and outside hosts.
+    Examine the \textbf{wireshark} output to see how PAT works.
+    Start the Apache web server on \texttt{guchi}. Also, start the web browser \texttt{Mozilla} on an outside host (e.g., \texttt{shakti}), and enter the URL \texttt{http://128.238.61.1}. Save the \textbf{wireshark} output.
+    Use \textbf{show ip nat translations} to display and then save the translation table.
+    Exchange the data you saved with a student in the other subnet.
+    \subsection*{Report}
+    \begin{enumerate}
+        \item From the \textbf{wireshark} data, explain how PAT worked, both for a dynamic translation and a static translation.
+        With PAT, can you have two web servers in the private network?
+        If not, why?
+        If yes, explain how this can be done.
+    \end{enumerate}
+    
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.9\textwidth]{img/fig1.png}
+        \caption{\textbf{Figure 8.7.} The network configuration for the NAT exercises.}
+        \label{fig:8.7}
+    \end{figure}
     \subsection*{NAT Router Configuration in Fig. 8.7}
     \begin{verbatim}
         ip nat pool mypool 128.238.61.102 128.238.61.103 netmask 255.255.255.0
@@ -312,54 +410,6 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         access-list 8 deny host 10.0.0.7
         access-list 8 permit 10.0.0.0 0.0.0.255
     \end{verbatim}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{img/fig1.png}
-    \end{figure}
-    \subsection*{Report}
-    \begin{enumerate}
-        \item How many entries were there in the translation table?
-        Why?
-    \end{enumerate}
-
-    \section*{NAT exercises 2}
-    Keep the login session to the router running. Execute \textbf{wireshark} on all the hosts. \\
-    Before any host in the private network send any packets out, ping an inside host (e.g., \texttt{fenchi}) from an outside host (e.g., \textbf{vayu}). You may try to ping 10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104. Can you ping these IP addresses? \\
-    Let an inside host send packets to an outside host, e.g., from \texttt{fenchi}, execute ping 128.238.61.100. Can you ping \texttt{fenchi} from an outside host now? Why? Which IP address should be used in the ping command in order to ping \texttt{fenchi}? \\
-    Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. \\
-    Exchange the data you saved with a student in the other subnet.
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Answer the above questions.
-        Use the saved translation table to justify your answers.
-        \item Compare the IP header of the ICMP query captured in the private network with that of the same ICMP query captured in the upper subnet, list their differences.
-        Explain how NAT works.
-        \item In addition to the IP address, what else was changed in the ICMP query packet?
-    \end{enumerate}
-
-
-    \section*{NAT exercises 3}
-    Keep the login session to the router running. Execute \textbf{wireshark} to capture ICMP messages. \\
-    Execute \textbf{sock -i -u -n1 128.238.61.101 8888} on \texttt{agni} to generate an ICMP port unreachable error. \\
-    Print the ICMP error message for the lab report. \\
-    Execute \textbf{show ip nat translations} in the router login window to display the translation table.
-    Save the output for the lab report.
-    Exchange the data you saved with a student in the other subnet.
-    \subsection*{Report}
-    \begin{enumerate}
-        \item Analyze the IP headers, the ICMP headers, and the ICMP payloads of the ICMP port unreachable errors captured in the private network and in the public network from the first experiment.
-        Explain how ICMP error was handled by the NAT router.
-    \end{enumerate}
-
-    \section*{NAT exercises 4}
-    Reboot the router to restore its default configuration.
-    Then, configure the router to use PAT, as given in Table 8.6. Now all the hosts in the private network use the same IP address 128.238.61.1. However, note that there is a static translation that maps guchi’s port 80 to 128.238.61.1 port 80. \\
-    Execute \textbf{wireshark} on all the hosts. \\
-    Generate traffic between the inside and outside hosts.
-    Examine the \textbf{wireshark} output to see how PAT works.
-    Start the Apache web server on \texttt{guchi}. Also, start the web browser \texttt{Mozilla} on an outside host (e.g., \texttt{shakti}), and enter the URL \texttt{http://128.238.61.1}. Save the \textbf{wireshark} output.
-    Use \textbf{show ip nat translations} to display and then save the translation table.
-    Exchange the data you saved with a student in the other subnet.
     \subsection*{PAT Router Configuration in Fig. 8.7}
     \begin{verbatim}
         ip nat inside source list 8 interface ethernet 0 overload
@@ -377,13 +427,6 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         access-list 8 deny host 10.0.0.7
         access-list 8 permit 10.0.0.0 0.0.0.255
     \end{verbatim}
-    \subsection*{Report}
-    \begin{enumerate}
-        \item From the \textbf{wireshark} data, explain how PAT worked, both for a dynamic translation and a static translation.
-        With PAT, can you have two web servers in the private network?
-        If not, why?
-        If yes, explain how this can be done.
-    \end{enumerate}
 
 \iffalse
     \section*{Socket programming exercises 1}
@@ -418,5 +461,36 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
         \item The FTP data connection should be established using the \textbf{PORT} command (see Chapter 5).
     \end{itemize}
 \fi
+
+% \pagebreak
+
+\appendix
+\section*{Appendices}
+\addcontentsline{toc}{section}{Appendices}
+\renewcommand{\thesubsection}{\Alph{subsection}}
+
+\subsection{DHCP Header}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/dhcp-header.png}
+    \caption{The DHCP message format}
+\end{figure}
+Reference: TCP/IP Essential
+\subsection{Linux Nat}
+Assuming your public interface is eth1 and local interface is eth0
+\begin{enumerate}
+    \item Enable forwarding on the box with\\
+    \texttt{echo 1 > /proc/sys/net/ipv4/ip\_forward}
+    \item Set natting the natting rule with\\
+    \texttt{iptables -t nat -A POSTROUTING -o eth1 -j MASQUERADE}
+    \item Accept traffic from eth0:\\
+    \texttt{iptables -A INPUT -i eth0 -j ACCEPT}
+    \item Allow established connections from the public interface.\\
+    \texttt{iptables -A INPUT -i eth1 -m state --state ESTABLISHED,RELATED -j ACCEPT}
+    \item Allow outgoing connections:\\
+    \texttt{iptables -A OUTPUT -j ACCEPT}
+\end{enumerate}
+
+
 
 \end{document}
